WAM-Studio-SF-Build/force-app/main/default/objects/Referral_Prediction__c/Referral_Prediction__c.object-meta.xml
<CustomObject>
    <description>Predicted referral propensity and value for an advocate client. Part of Salesforce Wealth AI Studio.</description>
    <label>Referral Prediction</label>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Referral Prediction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Predictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>