WAM-Studio-SF-Build/force-app/main/default/objects/Referral_Prediction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Predictions</relationshipLabel>
    <relationshipName>Referral_Predictions</relationshipName>
    <type>Lookup</type>
</CustomField>